# crewai-marking

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
deploy/: DEPLOY.md  deploy.sh  provision.sh
deploy/systemd/: awkns-cron.service  awkns-web.service
docs/: user-guide.md
docs/superpowers/plans/: 2026-06-29-awkns-outreach.md  2026-07-10-template-editor-list-redesign.md  2026-07-12-seed-companies-download-template.md  2026-07-13-manual-lead-conversion.md  2026-07-13-sequence-step-interval-editor.md  2026-07-23-seed-import-validation-and-convert-confirm.md  2026-07-24-apollo-enrich-review-modal.md
docs/superpowers/specs/: 2026-06-29-awkns-outreach-design.md  2026-07-09-campaign-archive-dashboard-design.md  2026-07-09-gmail-mailbox-templates-design.md  2026-07-10-template-editor-list-redesign-design.md  2026-07-12-seed-companies-download-template-design.md  2026-07-13-manual-lead-conversion-design.md  2026-07-13-sequence-step-interval-editor-design.md  2026-07-21-ec2-deploy-design.md  (+2 more)
src/awkns_outreach/: cli.py  compliance.py  config.py  crew.py  identity.py  main.py  run_once.py  runner.py  scheduler.py  uploads.py
tests/: conftest.py  test_apollo.py  test_compliance.py  test_gmail_oauth.py  test_gmail_replies.py  test_gmail_send.py  test_mail_sequence_model.py  test_mailboxes_web.py  test_mailer.py  test_main.py  test_seed.py  test_sequence_lifecycle.py  test_sequencer.py  test_sequences_web.py  test_sheets_tool.py  test_task_lifecycle.py  test_tasks_web.py  test_templates_web.py  test_tier_classifier.py  test_tiers_ai.py  test_web.py  test_writer.py
(+69 files in other folders)
