[project]
name = "awkns-outreach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.113.0",
    "crewai>=1.15.1",
    "crewai-tools>=1.15.1",
    "google-auth>=2.55.1",
    "gspread>=6.2.1",
    "python-dotenv>=1.2.2",
    "schedule>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
]
