[project]
name = "awkns-outreach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.113.0",
    "crewai>=1.15.1",
    "crewai-tools>=1.15.1",
    "google-auth>=2.55.1",
    "gspread>=6.2.1",
    "langchain-anthropic>=1.4.8",
    "python-dotenv>=1.2.2",
    "schedule>=1.2.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.18",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2.3",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.27.0",
    "apscheduler>=3.11.0",
    "typer>=0.15.1",
    "nh3>=0.3.6",
]

[project.scripts]
outreach = "awkns_outreach.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
awkns_outreach = ["web/templates/*.html"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
    "respx>=0.22.0",
]
